# Proyecto_Final_ML

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Despliegue_render/: despliegue.ipynb  fast_api_app.py  requirements.txt  streamlit_app.py  utils.py  valores_para_testeo_prototipos.csv
app/: README.md  app.py  pipeline_produccion.pkl  prueba_produccion.ipynb
data/: X_test_1  X_test_2  X_test_3  X_train_1  data_test.csv  data_train.csv  y_test  y_train
docs/: Presentacion_negocio.md  Presentacion_tecnica.md  memoria.md  memoria_resumen_general.md  memoria_tecnica.ipynb  memoria_tecnica.md
models/: Testeo_modelos_hiperparametros.ipynb  final_model.pkl
notebooks/: EDA.ipynb  Ensembles.ipynb  Informe de dataset original.html  Test_ZONE.ipynb  construction_pipeline_production_hugging.ipynb  fuentes.ipynb  modelling.ipynb  pipeline_preprocessing.ipynb  preprocessing.ipynb  prueba_produccion.ipynb
pipelines/: construction_pipeline_production.ipynb  pipeline_preprocessing.ipynb  pipeline_produccion.pkl
src/: eda.py  funciones_clases_pipeline_produccion.py  preprocess.py  preprocess_functions.py
src/ml_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
