[project]
name = "proyecto-final-ml"
version = "0.1.0"
description = "proyecto final ML desde los datos a la productivizacion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "keras>=3.11.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]
