[project]
name = "proyecto-final-ml"
version = "0.1.0"
description = "proyecto final ML desde los datos a la productivizacion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.3.2",
    "imbalanced-learn>=0.14.0",
    "keras>=3.11.2",
    "matplotlib>=3.10.5",
    "numpy<1.29",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "tensorflow<=2.20.0",
    "xgboost>=3.0.4",
    "scipy<1.13",
    "skrub>=0.6.1",
    "ydata-profiling>=4.12.2",
    "ipywidgets>=8.1.7",
    "streamlit>=1.48.1",
    "gradio>=5.43.1",
    "fastapi>=0.116.1",
]
